--- a/root/ueventd.qcom.rc
+++ b/root/ueventd.qcom.rc
@@ -1,45 +1,99 @@
-# Copyright (c) 2012, The Linux Foundation. All rights reserved.
-#
-# Redistribution and use in source and binary forms, with or without
-# modification, are permitted provided that the following conditions are met:
-#     * Redistributions of source code must retain the above copyright
-#       notice, this list of conditions and the following disclaimer.
-#     * Redistributions in binary form must reproduce the above copyright
-#       notice, this list of conditions and the following disclaimer in the
-#       documentation and/or other materials provided with the distribution.
-#     * Neither the name of Code Aurora nor
-#       the names of its contributors may be used to endorse or promote
-#       products derived from this software without specific prior written
-#       permission.
-#
-# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
-# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
-# IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
-# NON-INFRINGEMENT ARE DISCLAIMED.  IN NO EVENT SHALL THE COPYRIGHT OWNER OR
-# CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
-# EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
-# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
-# OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
-# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
-# OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
-# ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-#
+/dev/null                 0666   root       root
+/dev/zero                 0666   root       root
+/dev/full                 0666   root       root
+/dev/ptmx                 0666   root       root
+/dev/tty                  0666   root       root
+/dev/random               0666   root       root
+/dev/urandom              0666   root       root
+/dev/ashmem               0666   root       root
+/dev/binder               0666   root       root
+#/* < DTS2011072705129  xiangxu 20110728 begin */
+/dev/hw_led        	  0740   system     system
+#/* DTS2011072705129  xiangxu 20110728 end > */ 
 
-# the DIAG device node is not world writable/readable.
-/dev/diag                 0660   system     qcom_diag
+# logger should be world writable (for logging) but not readable
+/dev/log/*                0662   root       log
 
-/dev/genlock              0666   system     system
-/dev/kgsl                 0666   system     system
-/dev/kgsl-3d0             0666   system     system
+# the msm hw3d client device node is world writable/readable.
+/dev/msm_hw3dc            0666   root       root
+
+# the DIAG device node is world writable/readable.
+/dev/diag                 0666   root       root
+
+# gpu driver for adreno200 is globally accessible
+/dev/kgsl                 0666   root       root
+/dev/kgsl-3d0             0666   root       root
 /dev/kgsl-2d0             0666   root       root
 /dev/kgsl-2d1             0666   root       root
-/dev/ion                  0664   system     system
-/dev/rtc0                 0600   system     system
-/dev/smd0                 0660   system     system
-/dev/smd4                 0660   system     system
-/dev/smd_cxm_qmi          0640   radio      radio
-/dev/smd7                 0660   bluetooth  bluetooth
-/dev/rfcomm0              0660   bluetooth  bluetooth
+
+# these should not be world writable
+/dev/diag_arm9            0660   radio      radio
+/dev/android_adb          0660   adb        adb
+/dev/android_adb_enable   0660   adb        adb
+/dev/ttyMSM0              0600   bluetooth  bluetooth
+/dev/ttyHS0               0600   bluetooth  bluetooth
+/dev/uinput               0660   system     bluetooth
+/dev/alarm                0664   system     radio
+/dev/tty0                 0660   root       system
+#/* < DTS2011052606009 jiaxianghong 20110527 begin */
+# /*< DTS2011051901683 lijianzhao 20110519 begin */
+# /* change popedom of fb1 to system */
+/dev/graphics/fb1         0660   system     graphics
+# /* DTS2011051901683 lijianzhao 20110519 end >*/
+#/* < DTS2011052606009 jiaxianghong 20110527 end */
+/dev/graphics/*           0660   root       graphics
+/dev/msm_hw3dm            0660   system     graphics
+/dev/msm_rotator          0660   system     graphics
+/dev/input/*              0660   root       input
+/dev/eac                  0660   root       audio
+/dev/cam                  0660   root       camera
+/dev/pmem                 0660   system     graphics
+/dev/pmem_audio           0660   system     audio
+/dev/pmem_adsp*           0660   system     audio
+/dev/pmem_smipool*        0660   system     camera
+/dev/pmem_camera*         0660   system     camera
+#/*<DTS2010072602089 haiwenhui 20100726 begin*/
+/dev/oncrpc/*             0666   root       system
+#/*DTS2010072602089 haiwenhui 20100726 end>*/
+/dev/adsp/*               0660   system     audio
+/dev/snd/*                0660   system     audio
+/dev/mt9t013              0660   system     system
+/dev/msm_camera/*         0660   system     camera
+/dev/akm8976_daemon       0640   compass    system
+/dev/akm8976_aot          0640   compass    system
+/dev/akm8973_daemon       0640   compass    system
+/dev/akm8973_aot          0640   compass    system
+/dev/bma150               0640   compass    system
+/dev/cm3602               0640   compass    system
+/dev/akm8976_pffd         0640   compass    system
+/dev/lightsensor          0640   system     system
+/dev/radio0               0644   fm_radio   fm_radio
+/dev/i2c-2                0664   root       system
+/dev/i2c-4                0664   root       system
+/dev/msm_pcm_out*         0660   system     audio
+/dev/msm_pcm_in*          0660   system     audio
+/dev/msm_voicememo        0660   system     audio
+/dev/msm_pcm_ctl*         0660   system     audio
+/dev/msm_snd*             0660   system     audio
+/dev/msm_mp3*             0660   system     audio
+/dev/audience_a1026*      0660   system     audio
+/dev/tpa2018d1*           0660   system     audio
+/dev/msm_mvs              0660   system     audio
+/dev/msm_audpre           0660   system     audio
+/dev/msm_audio_ctl        0660   system     audio
+/dev/htc-acoustic         0660   system     audio
+/dev/vdec                 0660   system     audio
+/dev/qce                  0660   system     audio
+/dev/q6venc               0660   system     audio
+/dev/snd/dsp              0660   system     audio
+/dev/snd/dsp1             0660   system     audio
+/dev/snd/mixer            0660   system     audio
+/dev/msm_pcm_lp_dec       0660   system     audio
+/dev/smd0                 0640   radio      radio
+/dev/smd7                 0640   radio      radio
+#/* < DTS2011070601052 zhaojunmin 20110705 begin */
+/dev/smd17                0600   system     system
+#/* DTS2011070601052 zhaojunmin 20110705 end */
 /dev/smdcntl0             0640   radio      radio
 /dev/smdcntl1             0640   radio      radio
 /dev/smdcntl2             0640   radio      radio
@@ -48,79 +102,81 @@
 /dev/smdcntl5             0640   radio      radio
 /dev/smdcntl6             0640   radio      radio
 /dev/smdcntl7             0640   radio      radio
-/dev/smuxctl32            0640   radio      radio
 /dev/sdioctl0             0640   radio      radio
 /dev/sdioctl1             0640   radio      radio
 /dev/sdioctl2             0640   radio      radio
 /dev/sdioctl3             0640   radio      radio
 /dev/sdioctl4             0640   radio      radio
+/dev/sdioctl4             0640   radio      radio
 /dev/sdioctl5             0640   radio      radio
 /dev/sdioctl6             0640   radio      radio
 /dev/sdioctl7             0640   radio      radio
-/dev/sdioctl8             0640   radio      radio
-/dev/rmnet_mux_ctrl       0640   radio      radio
-/dev/hsicctl0             0640   radio      radio
-/dev/hsicctl1             0640   radio      radio
-/dev/hsicctl2             0640   radio      radio
-/dev/hsicctl3             0640   radio      radio
-/dev/oncrpc/*             0660   system     radio
-/dev/video*               0660   system     camera
-/dev/media*               0660   system     camera
-/dev/v4l-subdev*          0660   system     camera
-/dev/qseecom              0660   system     drmrpc
+/dev/qemu_trace           0666   system     system
+/dev/qmi                  0640   radio      radio
+/dev/qmi0                 0640   radio      radio
+/dev/qmi1                 0640   radio      radio
+/dev/qmi2                 0640   radio      radio
+/dev/bus/usb/*            0660   root       usb
 /dev/gemini0              0660   system     camera
-/dev/jpeg0                0660   system     camera
-/dev/jpeg1                0660   system     camera
-/dev/jpeg2                0660   system     camera
-/dev/msm_camera/*         0660   system     camera
-/dev/gemini/              0660   system     camera
-/dev/mercury0             0660   system     camera
-/dev/msm_vidc_reg         0660   system     audio
-/dev/msm_vidc_dec         0660   system     audio
-/dev/msm_vidc_dec_sec     0660   system     audio
-/dev/msm_vidc_enc         0660   system     audio
-/dev/msm_rotator          0664   system     system
-/dev/hw_random            0660   system     system
+/dev/usb_accessory        0660   root       usb
+/dev/video*               0660   system     camera 
 
+# CDMA radio interface MUX
+/dev/ts0710mux*           0640   radio      radio
+/dev/ppp                  0660   radio      vpn
+/dev/tun                  0640   vpn        vpn
+
+# sysfs properties
+/sys/devices/virtual/input/input*   enable      0660  root   input
+/sys/devices/virtual/input/input*   poll_delay  0660  root   input
+#permissions for video
+/dev/msm_vidc_reg         0660  system       audio
+/dev/msm_vidc_dec         0660  system       audio
+/dev/msm_vidc_dec_sec     0660  system       audio
+/dev/msm_vidc_enc         0660  system       audio
 #permissions for audio
-/dev/msm_qcelp            0660   system     audio
-/dev/msm_evrc             0660   system     audio
-/dev/msm_wma              0660   system     audio
-/dev/msm_wmapro           0660   system     audio
-/dev/msm_amrnb            0660   system     audio
-/dev/msm_amrwb            0660   system     audio
-/dev/msm_aac              0660   system     audio
-/dev/msm_multi_aac        0660   system     audio
-/dev/msm_aac_in           0660   system     audio
-/dev/msm_qcelp_in         0660   system     audio
-/dev/msm_evrc_in          0660   system     audio
-/dev/msm_amrnb_in         0640   system     audio
-/dev/msm_a2dp_in          0660   system     audio
-/dev/msm_ac3              0660   system     audio
-/dev/msm_acdb             0660   system     audio
-/dev/msm_cad              0660   system     audio
-/dev/msm_fm               0660   system     audio
-/dev/msm_mvs              0660   system     audio
-/dev/msm_pcm_lp_dec       0660   system     audio
-/dev/msm_preproc_ctl      0660   system     audio
-/dev/msm_rtac             0660   system     audio
-/dev/msm_voicememo        0660   system     audio
-/dev/radio0               0640   fm_radio   fm_radio
-/dev/smd3                 0660   bluetooth  bluetooth
-/dev/smd2                 0660   bluetooth  bluetooth
-/dev/ttyHSL1              0660   system     system
-/dev/mdm                  0660   system     radio
-/sys/devices/virtual/smdpkt/smdcntl*       open_timeout   0664 radio radio
-/dev/sdio_tty_ciq_00      0660   system     system
-/dev/tty_sdio_00          0660   system     system
+/dev/msm_amrnb            0660  system       audio
+/dev/msm_amrwb            0660  system       audio
+/dev/msm_aac              0660  system       audio
+/dev/msm_aac_in           0660  system       audio
+/dev/msm_qcelp            0660  system       audio
+/dev/msm_evrc             0660  system       audio
+/dev/msm_fm               0660  system       audio
+/dev/msm_acdb             0660  system       audio
+/dev/msm_wma              0660  system       audio
+/dev/msm_wmapro           0660  system       audio
+/dev/msm_qcelp_in         0660  system       audio
+/dev/msm_evrc_in          0660  system       audio
+/dev/msm_preproc_ctl      0660  system       audio
+/dev/msm_a2dp_in          0640  system       audio
+/dev/msm_amrnb_in         0640  system       audio
+/sys/devices/virtual/usb_composite/*   enable      0664  root   system
+/sys/devices/virtual/input/input*   enable      0660  root   input
+/sys/devices/virtual/input/input*   poll_delay  0660  root   input
+
+#/*< DTS2011041700393 lijianzhao 20110417 begin */
+#modify for 4125 baseline
+#/* <DTS2011082704500 weizhonghui  20110827 begin */ 
+#/* <DTS2011072601736 weizhonghui  20110809 begin */ 
+/dev/block/mmcblk0p7      0660  system       system
+#/* DTS2011072601736 weizhonghui  20110809 end > */
+#/* DTS2011082704500 weizhonghui  20110827 end > */
+/dev/hw_extern_sdcard     0444  sdcard_rw    sdcard_rw
+#/* <DTS2011062802725 zhengzhechu 20110630 begin */
+/dev/hw_extern_sdcardMounted 0644	sdcard_rw   sdcard_rw
+#/* DTS2011062802725 zhengzhechu 20110630 end> */
+#/dev/phudiag              0664  system       system
+/dev/smem_sleep_log       0664	system       system
+#/* DTS2011041700393 lijianzhao 20110417 end >*/
+#/* < DTS2011051001634 caomingxing 20110510 begin */
+#/* < DTS2011031800077 yuezenglong 20110318 begin */
+#/* < DTS2011021601598 yuezenglong 20110216 begin */
+/dev/pn544                  0660   root   nfc
+#/* DTS2011021601598 yuezenglong 20110216 end > */
+#/* DTS2011031800077 yuezenglong 20110318 end >*/
+#/* DTS2011051001634 caomingxing 20110510 end > */
+/dev/genlock              0666   root      root
 /dev/ttyGS0               0660   system     system
-/dev/i2c-5                0660   media       media
+/dev/mtp_usb              0660   root       mtp
+/dev/rfcomm0              0660   bluetooth   bluetooth
 
-# DVB devices
-/dev/dvb/adapter0/demux*  0444   media       media
-/dev/dvb/adapter0/dvr*    0664   media       media
-/dev/dvb/adapter0/video*  0664   media       media
-
-/dev/aps-12d              0640   system     system
-/dev/lsm303dlh_acc        0640   system     system
-/dev/lsm303dlh_mag        0640   system     system
