--- a/root/init.qcom.rc
+++ b/root/init.qcom.rc
@@ -12,6 +12,7 @@ on init
     mkdir /storage/usbdisk 0000 system system
 
     export EXTERNAL_STORAGE /storage/sdcard1
+    export SECONDARY_STORAGE /storage/sdcard0
 
     symlink /storage/sdcard1 /mnt/sdcard
     symlink /storage/sdcard1 /sdcard
